# KOHLER-SIngleRelay-Testing

./: .gitignore  embsys330_final_project-linux.code-workspace  embsys330_final_project-windows.code-workspace  embsys330_final_project_readme.md
tests/app/: CMakeLists.txt  prj.conf  testcase.yaml
tests/app/src/: main.c
tests/app/twister-out/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
tests/app/twister-out/disco_l475_iot1/adc.basic/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  run_id.txt
tests/app/twister-out/disco_l475_iot1/adc.basic/zephyr/: cmake_install.cmake  edt.pickle  linker.cmd.dep  zephyr.elf  zephyr.hex  (+5 more)
tests/app/twister-out/disco_l475_iot1/sample.testing.embsys330_fp_tests/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  run_id.txt
tests/app/twister-out/disco_l475_iot1/sensors.hts221/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  run_id.txt  zephyr_settings.txt
tests/app/twister-out/disco_l475_iot1/sensors.vl53l0x/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  run_id.txt
tests/app/twister-out/disco_l475_iot1/tim15.basic/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  run_id.txt
tests/app/twister-out/disco_l475_iot1/tim2.tim2_pwm2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  run_id.txt
(+371 files in other folders)
